--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ru.trainithard</groupId>
-    <artifactId>pollerbot</artifactId>
+    <artifactId>studentsbot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>PollerBot</name>
-    <description>Demo project for Spring Boot</description>
+    <name>StudentsBot</name>
+    <description>Students information bot</description>
     <properties>
         <java.version>17</java.version>
     </properties>
