- Extract sensitive info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-logging.config=classpath:logback-spring.xml
+spring.datasource.url=jdbc:postgresql://localhost:5432/studentsdb
+spring.datasource.username=tomcat
+spring.datasource.password=${db_password}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.liquibase.change-log=changelog.xml
+
+pollerbot.homework.directory=/home/tomcat
+pollerbot.token=${bot_token}
+pollerbot.username=${bot_username}
